wrap fixed;

--- a/voyageone-static/src/app/app.css
+++ b/voyageone-static/src/app/app.css
@@ -889,4 +889,5 @@ select::-ms-expand {
 }
 .word-wrap {
   word-wrap: break-word;
+  word-break: break-all;
 }
